# localdeck

./: .gitignore  README.md  localdeck-mqtt.yml  pyproject.toml
esphome/: localdeck.yml
localdeck_cli/: __main__.py
localdeck_mqtt/: __main__.py  build.py
