[tool.poetry]
name = "localdeck_cli"
version = "0.0.1"
description = "LocalDeck CLI"
authors = ["Louis King <jinglemansweep@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20240808"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.0.0"
pre-commit = "^3.6.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
